--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.7.3",
     "uuid": "^9.0.0"
   }
 }
